--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3139,11 +3139,11 @@ input, select, textarea {
 		@media screen and (max-width: 980px) {
 
 			#header {
-				padding: 4em 3em 0.1em 3em ;
+				padding: 2em 3em 0.1em 3em ;
 			}
 
 				#header.alt {
-					padding: 5em 3em 2em 3em ;
+					padding: 2em 3em 2em 3em ;
 				}
 
 		}
@@ -3151,7 +3151,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#header {
-				padding: 3em 2em 0.1em 2em ;
+				padding: 2em 2em 0.1em 2em ;
 			}
 
 				#header p {
@@ -3164,7 +3164,7 @@ input, select, textarea {
 					}
 
 				#header.alt {
-					padding: 4em 2em 1em 2em ;
+					padding: 2em 2em 1em 2em ;
 				}
 
 					#header.alt h1 {
@@ -3176,11 +3176,15 @@ input, select, textarea {
 		@media screen and (max-width: 480px) {
 
 			#header {
-				padding: 3em 1.5em 0.1em 1.5em ;
+				padding: 2em 1.5em 0.1em 1.5em ;
 			}
 
 				#header.alt {
-					padding: 4em 1.5em 1em 1.5em ;
+					padding: 2em 1.5em 1em 1.5em ;
+				}
+
+				#header.alt .logo img {
+					max-width: 60%;
 				}
 
 		}
@@ -3188,11 +3192,15 @@ input, select, textarea {
 		@media screen and (max-width: 360px) {
 
 			#header {
-				padding: 2.5em 1em 0.1em 1em ;
+				padding: 2em 1em 0.1em 1em ;
 			}
 
 				#header.alt {
-					padding: 3.5em 1em 0.5em 1em ;
+					padding: 2em 1em 0.5em 1em ;
+				}
+
+				#header.alt .logo img {
+					max-width: 60%;
 				}
 
 		}
